--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "meteor-node-stubs": "~0.2.4",
-    "react": "^15.5.3",
+    "meteor-node-stubs": "^0.2.6",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
-    "react-dom": "^15.5.3"
+    "react-dom": "^15.5.4"
   }
 }
