--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hh-it-remote",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
