--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-mounter": "^1.2.0"
+  },
+  "devDependencies": {
+    "spacejam": "^1.6.1"
   }
 }
