spacejam for windows has been added See https://github.com/practicalmeteor/spacejam/issues/67

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "spacejam test --driver-package=practicalmeteor:mocha"
+    "test": "spacejam test --driver-package practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
@@ -15,6 +15,6 @@
     "react-mounter": "^1.2.0"
   },
   "devDependencies": {
-    "spacejam": "^1.6.1"
+    "spacejam": "https://github.com/serut/spacejam/tarball/windows-suppport-rc4"
   }
 }
